--- a/DocumentManagementSystem/Views/Admin/AddAdmin.cshtml
+++ b/DocumentManagementSystem/Views/Admin/AddAdmin.cshtml
@@ -1,19 +1,11 @@
 ﻿@model EntityLayer.Concrete.Admin
 
 @{
-    ViewBag.Title = "AddAdmin";
+    ViewBag.Title = "Admin Oluşturma";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 
-<div class="card text-bg-light ">
-    <div class="card-header">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Admin İşlemleri</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Admin Ekleme</li>
-        </ol>
-    </div>
-</div>
 
 
 <div class="card bg-light">
