--- a/DocumentManagementSystem/Views/Admin/AdminList.cshtml
+++ b/DocumentManagementSystem/Views/Admin/AdminList.cshtml
@@ -2,18 +2,9 @@
 @model List<Admin>
 
 @{
-    ViewBag.Title = "AdminList";
+    ViewBag.Title = "Admin Listeleme";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
-<div class="card text-bg-light ">
-    <div class="card-header">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Admin İşlemleri</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Admin Listesi</li>
-        </ol>
-    </div>
-</div>
 
 <div class="card bg-light">
     <div class="card-body">
