--- a/DocumentManagementSystem/Views/Admin/AdminUpdate.cshtml
+++ b/DocumentManagementSystem/Views/Admin/AdminUpdate.cshtml
@@ -3,18 +3,9 @@
 
 
 @{
-    ViewBag.Title = "AdminUpdate";
+    ViewBag.Title = "Admin Güncelleme";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
-<div class="card text-bg-light ">
-    <div class="card-header">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Admin İşlemleri</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Admin Güncelleme</li>
-        </ol>
-    </div>
-</div>
 
 <div class="card bg-light">
     <div class="card-body">
