--- a/DocumentManagementSystem/Views/Student/StudentList.cshtml
+++ b/DocumentManagementSystem/Views/Student/StudentList.cshtml
@@ -4,19 +4,9 @@
 
 
 @{
-    ViewBag.Title = "StudentList";
+    ViewBag.Title = "Öğrenci Listeleme";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
-<div class="card text-bg-light ">
-    <div class="card-header">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Öğrenci İşlemleri</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Öğrenci Listeleme</li>
-        </ol>
-    </div>
-</div>
-
 
 <div class="card bg-light">
     <div class="card-body">
