--- a/DocumentManagementSystem/Views/DocumentType/UpdateDocumentType.cshtml
+++ b/DocumentManagementSystem/Views/DocumentType/UpdateDocumentType.cshtml
@@ -2,19 +2,9 @@
 
 
 @{
-    ViewBag.Title = "UpdateDocumentType";
+    ViewBag.Title = "Dosya Türü Güncelleme";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
-
-<div class="card text-bg-light ">
-    <div class="card-header">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Belge Türü İşlemleri</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Belge Türü Ekleme</li>
-        </ol>
-    </div>
-</div>
 
 
 <div class="card bg-light">
