--- a/DocumentManagementSystem/Views/Student/StudentAdd.cshtml
+++ b/DocumentManagementSystem/Views/Student/StudentAdd.cshtml
@@ -1,18 +1,9 @@
 ﻿@model EntityLayer.Concrete.Student
 
 @{
-    ViewBag.Title = "StudentAdd";
+    ViewBag.Title = "Öğrenci Ekleme";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-
-<div class="card text-bg-light ">
-    <div class="card-header">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Admin İşlemleri</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Admin Ekleme</li>
-        </ol>
-    </div>
-</div>
 
 <div class="card bg-light">
     <div class="card-body">
