--- a/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -160,7 +160,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("AddDocument", "Document")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Belgele Oluştur</p>
                                     </a>
