--- a/DocumentManagementSystem/Views/Student/StudentAdd.cshtml
+++ b/DocumentManagementSystem/Views/Student/StudentAdd.cshtml
@@ -32,7 +32,7 @@
                 <div class="col col-lg-6">
 
                     <label>Üniversite Kayıt Durumu *</label>
-                    <span title="Üniversiteye kayıtlı olan öğrencilerin öğrenci numarası, okuduğu bölümü ve ogr.bozok.edu.tr uzantılı mail adreslerini girmeleri gerekmektedir"><i  class="fa-solid fa-circle-info text-primary"></i></span>
+                    <span title="Üniversiteye kayıtlı olan öğrencilerin öğrenci numarası, okuduğu bölümü ve ogr.bozok.edu.tr uzantılı mail adreslerini girmeleri gerekmektedir"><i class="fa fa-info-circle text-primary"></i></span>
 
                     <div class="form-check">
                         @Html.RadioButtonFor(x => x.StudentUniversityRegistered, true, new { @class = " form-check-input", @checked = "checked" })
