--- a/DocumentManagementSystem/Views/Document/AddDocument.cshtml
+++ b/DocumentManagementSystem/Views/Document/AddDocument.cshtml
@@ -1,9 +1,56 @@
-﻿
+﻿@model EntityLayer.Concrete.Document
+
 @{
     ViewBag.Title = "Belge Oluşturma ";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 
+<div class="card bg-light">
+    <div class="card-body">
 
-<p></p>
+        @using (Html.BeginForm("AddDocument", "Document", FormMethod.Post))
+        {
+            <div class="row">
+                <!--SOL TARAF-->
+                <div class="col col-lg-6">
+                    <div class="form-group">
+                        @Html.Label("Belge Türü İsimi *")
+                        @Html.TextBoxFor(x => x.DocumentTypeID, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.DocumentTypeID)
+                        <br />
+                        @Html.Label("Öğrenci No *")
+                        @Html.TextBoxFor(x => x.StudentNo, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.StudentNo)
+                        <br />
+                        @Html.Label("Alternatif Açıklama ")
+                        <span title="Alternatif açıklama varsayılan belge açıklamasını yok sayar. Alternatif açıklama istemiyorsanız boş bırakın!"><i class="fa fa-info-circle text-primary"></i></span>
+
+                        @Html.TextBoxFor(x => x.AdminID, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(x => x.AdminID)
+
+                    </div>
+                </div>
+
+                <div class="col col-lg-6">
+
+
+                    @{ if (ViewBag.RecordStatus != null && ViewBag.RecordStatus == false)
+                        {
+                            if (ViewBag.RecordStatus)
+                            {
+                                //<p></p>
+                            }
+                            else
+                            {
+                                <p>@ViewBag.ErrorMessage</p>
+                            }
+                        }
+                    }
+                </div>
+                <br />
+                <button id="AdminAddButton" class="btn btn-primary">Yeni Öğrenci Oluştur</button>
+            </div>
+        }
+    </div>
+</div>
