--- a/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -34,6 +34,14 @@
 
     <!-- SWEET ALERT 2-->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <!--CHOOSE DROP DOWN İŞLERİ-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.min.css" rel="stylesheet" />
+
+
+
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
