--- a/DocumentManagementSystem/Views/DocumentType/AddDocumentType.cshtml
+++ b/DocumentManagementSystem/Views/DocumentType/AddDocumentType.cshtml
@@ -1,89 +1,100 @@
-﻿@model DocumentManagementSystem.Models.DocumentTypeModel
+﻿    @model DocumentManagementSystem.Models.DocumentTypeModel
+
+    @{
+        ViewBag.Title = "Dosya Türü Ekleme";
+        Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    }
+
+    <div class="card bg-light">
+        <div class="card-body">
+
+            @using (Html.BeginForm("AddDocumentType", "DocumentType", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                <div class="row">
+                    <!--SOL TARAF-->
+                    <div class="col col-lg-6">
+                        <div class="form-group">
+                            @Html.Label("Belge Türü Adı *")
+                            @Html.TextBoxFor(x => x.documentType.DocumentTypeName, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.documentType.DocumentTypeName)
+                            @Html.ValidationMessage("DocumentTypeName")
+                            <br />
+                            @Html.Label("Belge Türü Yazısı *")
+                            @Html.TextAreaFor(x => x.documentType.DocumentTypeText, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(x => x.documentType.DocumentTypeText)
+                            @Html.ValidationMessage("DocumentTypeText")
+                            <br />
+                            @Html.Label("Belge Türü İmza Adedi *")
+                            @Html.TextBoxFor(x => x.documentType.DocumentTypeNumSignature, new { @class = "form-control", type = "number" })
+                            @Html.ValidationMessageFor(x => x.documentType.DocumentTypeNumSignature)
+                            @Html.ValidationMessage("DocumentTypeNumSignature")
+
+                            <br />
+                            @Html.Label("Belge Türü İmza/İmzalar *")
+                            <span title="Belgeye eklenecek imza/imzaları seçiniz imza adedi ile seçilen imza sayısı aynı olmalıdır!"><i class="fa fa-info-circle text-primary"></i></span>
+                            @Html.DropDownListFor(x => x.AdminIds, Model.selectAdminItems, new { @class = "form-control", id = "sec", multiple = "multiple" , placeholder = "İmza seçiniz..." })
 
 
-@{
-    ViewBag.Title = "Dosya Türü Ekleme";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
-}
+                        </div>
+                    </div>
 
-<div class="card bg-light">
-    <div class="card-body">
+                    <script>
+                        $("#sec").chosen({
+                            'no_results_text': 'Aranan kişi bulunamadı!',
+                            'placeholder_text_multiple': 'İmza/İmzalar seçiniz...',
+                            'display_selected_options': false,
+                            'max_selected_options': 3
+                        });
 
-        @using (Html.BeginForm("AddDocumentType", "DocumentType", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-            <div class="row">
-                <!--SOL TARAF-->
-                <div class="col col-lg-6">
-                    <div class="form-group">
-                        @Html.Label("Belge Türü Adı *")
-                        @Html.TextBoxFor(Model => Model.documentType.DocumentTypeName , new { @class = "form-control" })
-                        @Html.ValidationMessageFor(Model => Model.documentType.DocumentTypeName )
+                        $("#sec").bind("chosen:maxselected", function () { alert("Seçilebilecek maksimum imza sayısına ulaştınız!"); }); 
+
+                    </script>
+
+                    <!--SAĞ TARAF-->
+                    <div class="col col-lg-6">
+                        <label>Belge Türü Aktiflik *</label>
+                        <div class="form-check">
+                            @Html.RadioButtonFor(x => x.documentType.DocumentTypeStatus, true, new { @class = " form-check-input", @checked = "checked" })
+                            <label class="form-check-label" for="gridRadios2">
+                                Aktif-Kullanılabilir
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            @Html.RadioButtonFor(x => x.documentType.DocumentTypeStatus, false, new { @class = "form-check-input" })
+                            <label class="form-check-label" for="gridRadios2">
+                                Pasif-Kullanılamaz
+                            </label>
+                        </div>
+
                         <br />
-                        @Html.Label("Belge Türü Yazısı *")
-                        @Html.TextAreaFor(Model => Model.documentType.DocumentTypeText, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(Model => Model.documentType.DocumentTypeText)
-                        <br />
-                        @Html.Label("Belge Türü İmza Adedi *")
-                        @Html.TextBoxFor(Model => Model.documentType.DocumentTypeNumSignature, new { @class = "form-control", type = "number" })
-                        @Html.ValidationMessageFor(Model => Model.documentType.DocumentTypeNumSignature)
-                        <br />
-                        @Html.Label("Belge Türü İmza Adedi *")
-                        <span title="Alternatif açıklama varsayılan belge açıklamasını yok sayar. Alternatif açıklama istemiyorsanız boş bırakın!"><i class="fa fa-info-circle text-primary"></i></span>
-                        @Html.DropDownListFor(m => m.AdminIds, Model.selectAdminItems, new { @class = "form-control", id = "sec" ,multiple="multiple" })
+                        @Html.Label("Belge Türü Arka Plan Görüntüsü (PNG-JPG)*")
+                        <div class="input-group">
+                            <input type="file" name="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
+                        </div>
 
-
-                    </div>
-                </div>
-
-                <script>
-                    $("#sec").chosen();
-                </script>
-
-                <!--SAĞ TARAF-->
-                <div class="col col-lg-6">
-                    <label>Belge Türü Aktiflik *</label>
-                    <div class="form-check">
-                        @Html.RadioButtonFor(Model => Model.documentType.DocumentTypeStatus, true, new { @class = " form-check-input", @checked = "checked" })
-                        <label class="form-check-label" for="gridRadios2">
-                            Aktif-Kullanılabilir
-                        </label>
-                    </div>
-                    <div class="form-check">
-                        @Html.RadioButtonFor(Model => Model.documentType.DocumentTypeStatus, false, new { @class = "form-check-input" })
-                        <label class="form-check-label" for="gridRadios2">
-                            Pasif-Kullanılamaz
-                        </label>
-                    </div>
-
-                    <br />
-                    @Html.Label("Belge Türü Arka Plan Görüntüsü (PNG-JPG)*")
-                    <div class="input-group">
-                        <input type="file" name="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04" aria-label="Upload">
-                    </div>
-
-                    @{ if (ViewBag.RecordStatus != null)
-                        {
-                            if (ViewBag.RecordStatus)
+                        @{ if (ViewBag.RecordStatus != null)
                             {
-                                //<p></p>
+                                if (ViewBag.RecordStatus)
+                                {
+                                    //<p></p>
+                                }
+                                else
+                                {
+                                    <p>@ViewBag.UploadError</p>
+                                }
                             }
                             else
                             {
                                 <p>@ViewBag.UploadError</p>
                             }
                         }
-                        else
-                        {
-                            <p>@ViewBag.UploadError</p>
-                        }
-                    }
-                    <br />
-                    <button id="AdminAddButton" class="btn btn-primary">Yeni Belge Türü Oluştur</button>
+                        <br />
+                        <button id="AdminAddButton" class="btn btn-primary">Yeni Belge Türü Oluştur</button>
+                    </div>
                 </div>
-            </div>
-        }
+            }
+        </div>
     </div>
-</div>
 @{
 
     if (ViewBag.RecordStatus != null)
