--- a/DocumentManagementSystem/Views/DocumentType/AddDocumentType.cshtml
+++ b/DocumentManagementSystem/Views/DocumentType/AddDocumentType.cshtml
@@ -23,16 +23,16 @@
                             @Html.TextAreaFor(x => x.documentType.DocumentTypeText, new { @class = "form-control" })
                             @Html.ValidationMessageFor(x => x.documentType.DocumentTypeText)
                             @Html.ValidationMessage("DocumentTypeText")
-                            <br />
+                            @*<br />
                             @Html.Label("Belge Türü İmza Adedi *")
                             @Html.TextBoxFor(x => x.documentType.DocumentTypeNumSignature, new { @class = "form-control", type = "number" })
-                            @Html.ValidationMessageFor(x => x.documentType.DocumentTypeNumSignature)
-                            @Html.ValidationMessage("DocumentTypeNumSignature")
+                            @Html.ValidationMessageFor(x => x.documentType.DocumentTypeNumSignature)*@
 
                             <br />
                             @Html.Label("Belge Türü İmza/İmzalar *")
-                            <span title="Belgeye eklenecek imza/imzaları seçiniz imza adedi ile seçilen imza sayısı aynı olmalıdır!"><i class="fa fa-info-circle text-primary"></i></span>
-                            @Html.DropDownListFor(x => x.AdminIds, Model.selectAdminItems, new { @class = "form-control", id = "sec", multiple = "multiple" , placeholder = "İmza seçiniz..." })
+                            <span title="Belgeye eklenecek imza/imzaları seçiniz. İmzalar seçim sırasına göre soldan sağa sıralanacaktır !"><i class="fa fa-info-circle text-primary"></i></span>
+                            @Html.DropDownListFor(x => x.AdminIds, Model.selectAdminItems, new { @class = "form-control", id = "sec", multiple = "multiple", placeholder = "İmza seçiniz..." })
+                            @Html.ValidationMessage("DocumentTypeNumSignature")
 
 
                         </div>
