--- a/DocumentManagementSystem/Views/Document/AddDocument.cshtml
+++ b/DocumentManagementSystem/Views/Document/AddDocument.cshtml
@@ -1,4 +1,4 @@
-﻿@model EntityLayer.Concrete.Document
+﻿@model DocumentManagementSystem.Models.DocumentModel
 
 @{
     ViewBag.Title = "Belge Oluşturma ";
@@ -16,20 +16,27 @@
                 <div class="col col-lg-6">
                     <div class="form-group">
                         @Html.Label("Belge Türü *")
-                        @Html.DropDownListFor(x=>x.DocumentTypeID , (List<SelectListItem>) ViewBag.valueDocumentType , new {@class ="form-control"})
-                        @Html.ValidationMessageFor(x => x.DocumentTypeID)
+                        @Html.DropDownListFor(x => x.document.DocumentTypeID, Model.selectDocumentTypeItems, new { @class = "form-control", id = "sec"})
+                        @Html.ValidationMessage("DocumentTypeID")
                         <br />
                         @Html.Label("Öğrenci No *")
-                        @Html.TextBoxFor(x => x.StudentNo, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(x => x.StudentNo)
+                        @Html.TextBoxFor(x => x.document.StudentNo, new { @class = "form-control" })
+                        @Html.ValidationMessage("StudentNo")
                         <br />
                         @Html.Label("Alternatif Açıklama ")
                         <span title="Alternatif açıklama varsayılan belge açıklamasını yok sayar. Alternatif açıklama istemiyorsanız boş bırakın!"><i class="fa fa-info-circle text-primary"></i></span>
-                        @Html.TextBoxFor(x => x.AdminID, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(x => x.AdminID)
+                        @Html.TextBoxFor(x => x.document.DocumentAlternativeText, new { @class = "form-control" })
+                        @Html.ValidationMessage("DocumentAlternativeText")
 
                     </div>
                 </div>
+
+                <script>
+                        $("#sec").chosen({
+                            'no_results_text': 'Aranan belge türü bulunamadı!',
+                            'placeholder_text_single': "Belge Türü Seçiniz...",
+                        });
+                </script>
 
                 <div class="col col-lg-6">
 
