--- a/DocumentManagementSystem/Views/Document/AddDocument.cshtml
+++ b/DocumentManagementSystem/Views/Document/AddDocument.cshtml
@@ -20,7 +20,7 @@
                         @Html.ValidationMessage("DocumentTypeID")
                         <br />
                         @Html.Label("Öğrenci No *")
-                        @Html.TextBoxFor(x => x.document.StudentID, new { @class = "form-control" })
+                        @Html.TextBoxFor(x => x.studentNo, new { @class = "form-control" })
                         @Html.ValidationMessage("StudentNo")
                         <br />
                         @Html.Label("Alternatif Açıklama ")
