--- a/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -174,7 +174,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("DocumentList", "Document")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Belge Listele</p>
                                     </a>
