--- a/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
+++ b/DocumentManagementSystem/Views/Shared/_AdminLayout.cshtml
@@ -125,7 +125,7 @@
                         <!--HIZLI İŞLEMLER-->
                         <li class="nav-header">Hızlı İşlemler</li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="@Url.Action("DocumentVerification", "Document")" class="nav-link">
                                 <i class="nav-icon far fa-file"></i>
                                 <p>
                                     Belge Doğrulama
@@ -134,7 +134,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a href="#" class="nav-link">
+                            <a href="@Url.Action("AddDocument", "Document")" class="nav-link">
                                 <i class="nav-icon far fa-calendar-alt"></i>
                                 <p>
                                     Belge Oluşturma
@@ -186,7 +186,7 @@
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">
+                                    <a href="@Url.Action("DocumentVerification", "Document")" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Belge Doğrula</p>
                                     </a>
