--- a/DocumentManagementSystem/Views/Document/DocumentList.cshtml
+++ b/DocumentManagementSystem/Views/Document/DocumentList.cshtml
@@ -8,54 +8,58 @@
 
 @using (Html.BeginForm("DocumentList", "Document", FormMethod.Post))
 {
-    <div class="row">
-        <div class="col col-lg-6">
-            <div class="form-group">
-                @Html.Label("Öğrenci No")
-                @Html.TextBoxFor(x => x.StudentNo, new { @class = "form-control", type = "number" })
-                <button class="btn btn-primary">Filtrele</button>
-            </div>
-        </div>
-    </div>
-}
-
-
-@if (Model == null)
-{
-    <p>Listelenecek Veri Yok!</p>
-}
-else
-{
     <div class="card bg-light">
         <div class="card-body">
-
-            <table class="table table-bordered">
-                <tr>
-                    <th>Belge Sahibi</th>
-                    <th>No/Mail</th>
-                    <th>Belge Türü</th>
-                    <th>Belge Durumu</th>
-                    <th>Oluşturma Tarihi</th>
-                    <th>Görüntüle</th>
-                    <th>PDF Oluştur</th>
-
-                </tr>
-                @foreach (var documentItem in Model.DocumentList)
-                {
-                    <tr>
-                        <td>@documentItem.Student.StudentName @documentItem.Student.StudentSurname</td>
-                        <td>@(documentItem.Student.StudentNo==null ? documentItem.Student.StudentMail : documentItem.Student.StudentNo  )</td>
-                        <td>@documentItem.DocumentType.DocumentTypeName</td>
-                        <td>@(documentItem.DocumentStatus ? "İmzalı" : "İmzasız")</td>
-                        <td>@documentItem.DocumentCreateDate.ToString("g")</td>
-                        <td style="text-align:center"><a href="/Document/VievHTMLDocument/@documentItem.DocumentID" class="btn btn-primary">Görüntüle</a></td>
-                        <td style="text-align:center"><a href="/Document/GeneratePDF/@documentItem.DocumentID" class="btn btn-primary">PDF Oluştur</a></td>
-                    </tr>
-                }
-            </table>
+            <div class="row">
+                <div class="col col-lg-6">
+                    <div class="form-group">
+                        @Html.Label("Öğrenci No")
+                        @Html.TextBoxFor(x => x.StudentNo, new { @class = "form-control", type = "number" })
+                        <button class="btn btn-primary">Filtrele</button>
+                    </div>
+                </div>
+            </div>
+            </div>
         </div>
-    </div>
+            }
 
-}
+
+            @if (Model == null)
+            {
+                <p>Listelenecek Veri Yok!</p>
+            }
+            else
+            {
+                <div class="card bg-light">
+                    <div class="card-body">
+
+                        <table class="table table-bordered">
+                            <tr>
+                                <th>Belge Sahibi</th>
+                                <th>No/Mail</th>
+                                <th>Belge Türü</th>
+                                <th>Belge Durumu</th>
+                                <th>Oluşturma Tarihi</th>
+                                <th>Görüntüle</th>
+                                <th>PDF Oluştur</th>
+
+                            </tr>
+                            @foreach (var documentItem in Model.DocumentList)
+                            {
+                                <tr>
+                                    <td>@documentItem.Student.StudentName @documentItem.Student.StudentSurname</td>
+                                    <td>@(documentItem.Student.StudentNo==null ? documentItem.Student.StudentMail : documentItem.Student.StudentNo  )</td>
+                                    <td>@documentItem.DocumentType.DocumentTypeName</td>
+                                    <td>@(documentItem.DocumentStatus ? "İmzalı" : "İmzasız")</td>
+                                    <td>@documentItem.DocumentCreateDate.ToString("g")</td>
+                                    <td style="text-align:center"><a href="/Document/VievHTMLDocument/@documentItem.DocumentID" class="btn btn-primary">Görüntüle</a></td>
+                                    <td style="text-align:center"><a href="/Document/GeneratePDF/@documentItem.DocumentID" class="btn btn-primary">PDF Oluştur</a></td>
+                                </tr>
+                            }
+                        </table>
+                    </div>
+                </div>
+
+            }
 
 
